## Resolv Host Information Plugin

SET(hostinfo_SOURCES
  hostinfo.cpp
  hostinfodialog.cpp
)

SET(hostinfo_HEADERS
  hostinfo.h
  hostinfodialog.h
)

REMOVE_DEFINITIONS (-DQT_DBUS_LIB -DQT_XML_LIB -DQT_WEBKIT_LIB -DQT_XMLPATTERNS_LIB)

QT4_WRAP_CPP (hostinfo_MOCS ${hostinfo_HEADERS})

INCLUDE_DIRECTORIES (
  ${CMAKE_CURRENT_BINARY_DIR}
  ${XHTMLDBG_INCLUDE_INTERFACE}
)

ADD_LIBRARY (HostInfo STATIC
  ${hostinfo_SOURCES}
  ${hostinfo_MOCS}
  ${hostinfo_HEADERS}
)

SET_TARGET_PROPERTIES (HostInfo PROPERTIES
  LINKER_LANGUAGE CXX
  LINK_FLAGS "${LIB_FPIC_CXXFLAGS}"
)

TARGET_LINK_LIBRARIES (HostInfo
  ${QT_QTCORE_LIBRARY}
  ${QT_QTGUI_LIBRARY}
  ${QT_QTNETWORK_LIBRARY}
)

##EOF
