# CMakeLists.txt
#
# XHTMLDBG Plugin Interface
#

SET (INCLUDE_NAME_DIR "xhtmldbg-1.0")

CONFIGURE_FILE (interface.h.cmake 
  ${CMAKE_CURRENT_SOURCE_DIR}/interface.h
)

CONFIGURE_FILE (xhtmldbg.pc.cmake
  ${CMAKE_CURRENT_BINARY_DIR}/xhtmldbg.pc
)

SET (interface_SOURCES
  plugininfo.cpp
  plugger.cpp
  wininterface.cpp
)

SET (interface_HEADERS
  interface.h
  plugininfo.h
  plugger.h
  wininterface.h
)

QT4_WRAP_CPP (interface_MOC ${interface_HEADERS})

INCLUDE_DIRECTORIES (
  ${QT_INCLUDE_DIR}
  ${XHTMLDBG_INCLUDE_INTERFACE}
)

ADD_LIBRARY (xhtmldbginterface SHARED
  ${interface_MOC}
  ${interface_HEADERS}
  ${interface_SOURCES}
)

SET_TARGET_PROPERTIES (xhtmldbginterface PROPERTIES
  VERSION "${XHTMLDBG_VERSION_MAJOR}.${XHTMLDBG_VERSION_MINOR}.${XHTMLDBG_VERSION_RELEASE}"
  SOVERSION ${XHTMLDBG_VERSION_MAJOR}
  OUTPUT_NAME ${INCLUDE_NAME_DIR}
  LINKER_LANGUAGE CXX
  COMPILE_FLAGS "${LIB_FPIC_CXXFLAGS}"
  LINK_FLAGS "${LIB_FPIC_CXXFLAGS} ${LIB_RDYNAMIC_CXXFLAGS} ${XHTMLDBG_LDFLAGS}"
)

TARGET_LINK_LIBRARIES (xhtmldbginterface
  ${QT_QTCORE_LIBRARY}
  ${QT_QTGUI_LIBRARY}
  ${QT_QTXML_LIBRARY}
  ${QT_QTDBUS_LIBRARY}
  ${KDE4_KDEUI_LIBRARY}
  ${QJSON_LIBRARIES}
)

TARGET_LINK_LIBRARIES (xhtmldbginterface
  ${QT_QTGUI_LIBRARY}
  ${KDE4_KDEUI_LIBRARY}
)

INSTALL (TARGETS xhtmldbginterface
  LIBRARY DESTINATION ${LIB_INSTALL_DIR}
)

INSTALL (FILES 
  ${interface_HEADERS}
  DESTINATION include/xhtmldbg-1.0
)

INSTALL (FILES 
  ${CMAKE_CURRENT_BINARY_DIR}/xhtmldbg.pc
  DESTINATION ${LIB_INSTALL_DIR}/pkgconfig
)

## EOF
 
