# CMakeLists.txt

SET (npploader_SOURCES
  npploader.cpp
  nppattributes.cpp
  nppplugin.cpp
)

SET (npploader_HEADERS
  npploader.h
  nppattributes.h
)

SET (npploader_NOMOC_HEADERS
  nppplugin.h
)

QT4_WRAP_CPP (npploader_MOCS ${npploader_HEADERS})

INCLUDE_DIRECTORIES (
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${XULRUNNER_INCLUDES}
)

ADD_LIBRARY (NPPLoader STATIC
  ${npploader_MOCS}
  ${npploader_NOMOC_HEADERS}
  ${npploader_HEADERS}
  ${npploader_SOURCES}
)

REMOVE_DEFINITIONS (-DQT_DBUS_LIB -DQT_XML_LIB -DQT_XMLPATTERNS_LIB)
ADD_DEFINITIONS (${XULRUNNER_DEFINITIONS})

SET_TARGET_PROPERTIES (NPPLoader PROPERTIES
  LINKER_LANGUAGE CXX
  COMPILE_FLAGS "${LIB_FPIC_CXXFLAGS}"
)

TARGET_LINK_LIBRARIES (NPPLoader
  ${QT_QTCORE_LIBRARY}
  ${QT_QTGUI_LIBRARY}
  ${QT_QTNETWORK_LIBRARY}
  ${QT_QTWEBKIT_LIBRARY}
  ${XULRUNNER_LIBRARIES}
)

## EOF
